# vibegate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/user_input_classifier/: __init__.py  classifier.py  core.py  formatter.py  guidance.py  hook.py  semgrep_runner.py
src/user_input_classifier/adapters/: __init__.py  claude_code.py
src/user_input_classifier/rules/: generic-user-input.yaml  python-user-input.yaml
src/vibegate/: __init__.py  activity_log.py  classifier.py  cli.py  colors.py  core.py  formatter.py  guidance.py  hook.py  models.py  semgrep_runner.py
src/vibegate/adapters/: __init__.py  base.py  claude_code.py  codex.py
src/vibegate/rules/: github-actions.yaml  go-user-input.yaml  java-user-input.yaml  js-user-input.yaml  php-user-input.yaml  python-user-input.yaml  ruby-user-input.yaml
tests/: conftest.py  test_activity_log.py  test_adapters.py  test_classifier.py  test_cli.py  test_guidance.py  test_semgrep_runner.py
tests/fixtures/: test_exec.py  test_go.go  test_http.py  test_java.java  test_js.js  test_php.php  test_ruby.rb
