[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibegate"
version = "1.0.0"
description = "Host-agnostic pre-write security hook: detects user-input patterns via Semgrep and emits deterministic, no-LLM security guidance."
requires-python = ">=3.11"
dependencies = ["semgrep>=1.100"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vibegate = "vibegate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibegate = ["rules/*.yaml"]
