[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibegate"
version = "1.0.0"
description = "Host-agnostic pre-write security hook: detects user-input patterns via Semgrep and emits deterministic, no-LLM security guidance."
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["semgrep>=1.100"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vibegate = "vibegate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Fixtures under tests/fixtures/ are example vulnerable-code snippets read via
# `.read_text()`, not test modules — several match pytest's test_*.py
# collection pattern and import framework code (flask, etc.) that isn't a
# project dependency, so they must never be collected/imported directly.
norecursedirs = ["tests/fixtures"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibegate = ["rules/*.yaml"]
