[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibegate"
version = "1.0.0"
description = "Host-agnostic pre-write security hook: detects user-input patterns via Semgrep and emits deterministic, no-LLM security guidance."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "theMiddle"}]
requires-python = ">=3.11"
keywords = ["security", "semgrep", "claude-code", "static-analysis", "sast", "ai-coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["semgrep>=1.100"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/theMiddleBlue/vibegate"
Repository = "https://github.com/theMiddleBlue/vibegate"
Issues = "https://github.com/theMiddleBlue/vibegate/issues"

[project.scripts]
vibegate = "vibegate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Fixtures under tests/fixtures/ are example vulnerable-code snippets read via
# `.read_text()`, not test modules — several match pytest's test_*.py
# collection pattern and import framework code (flask, etc.) that isn't a
# project dependency, so they must never be collected/imported directly.
norecursedirs = ["tests/fixtures"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibegate = ["rules/*.yaml"]
